--- a/portal-ui/pom.xml
+++ b/portal-ui/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <artifactId>entando-core</artifactId>
         <groupId>org.entando.entando</groupId>
-        <version>5.3.1-SNAPSHOT</version>
+        <version>5.3.1</version>
     </parent>
     <groupId>org.entando.entando</groupId>
     <artifactId>entando-portal-ui</artifactId>
-    <version>5.3.1-SNAPSHOT</version>
+    <version>5.3.1</version>
     <packaging>war</packaging>
     <name>Entando Core: Portal UI</name>
     <description>Entando Portal UI: an agile, modern and user-centric open source Portal platform.</description>
@@ -159,8 +159,8 @@
                         <phase>deploy</phase>
                         <configuration>
                             <file>${project.build.directory}/${project.build.finalName}.jar</file>
-                            <url>${maven-repository-url-release}</url>
-                            <repositoryId>nexus-release</repositoryId>
+                            <url>${maven-repository-url-sonatype-snapshot}</url>
+                            <repositoryId>sonatype-nexus-snapshot</repositoryId>
                             <generatePom>false</generatePom>
                             <pomFile>pom.xml</pomFile>
                             <packaging>jar</packaging>
@@ -232,12 +232,12 @@
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-engine</artifactId>
-            <version>5.3.1-SNAPSHOT</version>
+            <version>5.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-engine</artifactId>
-            <version>5.3.1-SNAPSHOT</version>
+            <version>5.3.1</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -245,18 +245,18 @@
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-admin-console</artifactId>
-            <version>5.3.1-SNAPSHOT</version>
+            <version>5.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-admin-console</artifactId>
-            <version>5.3.1-SNAPSHOT</version>
+            <version>5.3.1</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-admin-console</artifactId>
-            <version>5.3.1-SNAPSHOT</version>
+            <version>5.3.1</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
