--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.entando.entando</groupId>
     <artifactId>entando-core</artifactId>
-    <version>5.3.1-SNAPSHOT</version>
+    <version>5.3.1-ApacheCxfLess</version>
     <packaging>pom</packaging>
     <name>Entando Core</name>
     <description>Entando Core: an agile, modern and user-centric open source Portal platform.</description>
@@ -26,7 +26,7 @@
         <connection>scm:git:git@github.com:entando/entando-core.git</connection>
         <developerConnection>scm:git:git@github.com:entando/entando-core.git</developerConnection>
         <url>https://github.com/entando/entando-core</url>
-        <tag>v5.3.1-SNAPSHOT</tag>
+        <tag>v5.3.1-ApacheCxfLess</tag>
     </scm>
     <organization>
         <name>Entando Inc.</name>
