--- a/pom.xml
+++ b/pom.xml
@@ -420,9 +420,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -765,8 +765,8 @@
 
         <dependency>
             <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>1.7</version>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>2.3</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
