--- a/portal-ui/pom.xml
+++ b/portal-ui/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <artifactId>entando-core</artifactId>
         <groupId>org.entando.entando</groupId>
-        <version>5.3.2-SNAPSHOT</version>
+        <version>5.3.2</version>
     </parent>
     <groupId>org.entando.entando</groupId>
     <artifactId>entando-portal-ui</artifactId>
-    <version>5.3.2-SNAPSHOT</version>
+    <version>5.3.2</version>
     <packaging>war</packaging>
     <name>Entando Core: Portal UI</name>
     <description>Entando Portal UI: an agile, modern and user-centric open source Portal platform.</description>
@@ -232,12 +232,12 @@
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-engine</artifactId>
-            <version>5.3.2-SNAPSHOT</version>
+            <version>5.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-engine</artifactId>
-            <version>5.3.2-SNAPSHOT</version>
+            <version>5.3.2</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
@@ -245,18 +245,18 @@
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-admin-console</artifactId>
-            <version>5.3.2-SNAPSHOT</version>
+            <version>5.3.2</version>
         </dependency>
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-admin-console</artifactId>
-            <version>5.3.2-SNAPSHOT</version>
+            <version>5.3.2</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.entando.entando</groupId>
             <artifactId>entando-admin-console</artifactId>
-            <version>5.3.2-SNAPSHOT</version>
+            <version>5.3.2</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
